add \tl_sow:Nn / \tl_sow_reap:N & friends
this was discussed, oh, ages ago. to be discussed about whether we actually want it!!

--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -1067,6 +1067,42 @@
 %   \end{texnote}
 % \end{function}
 %
+
+% \begin{function}[added = 2018-01-04]{\tl_sow_prepare:N,\tl_sow:Nn,\tl_sow_reap:,\tl_gsow_prepare:N,\tl_gsow:Nn,\tl_gsow_greap:}
+%   \begin{syntax}
+%     \cs{tl_sow_prepare:N} \meta{tl var} \\
+%     \cs{tl_sow:Nn} \meta{tl var} \Arg{tokens} \\
+%     \cs{tl_sow_reap:N} \meta{tl var}
+%   \end{syntax}
+% When building the contents of token list variables with multiple \cs{tl_put_right:Nn}
+% commands, performance can be poor when there are many iterations.
+% The \cs{tl_sow:Nn} and \cs{tl_sow_reap:N} commands provide a faster alternative
+% for large variable sizes at the expense of greater memory consumption and \TeX\ hash space.
+%
+% To start, `prepare' for the sowing to come:
+% \begin{verbatim}
+% \tl_sow_prepare:N \l_tmpa_tl
+% \end{verbatim}
+% This clears the token list variable and initialises internal variables.
+% Here, call \cs{tl_sow:Nn} as many times as necessary:
+% \begin{verbatim}
+% \tl_sow:Nn \l_tmpa_tl {tokens1}
+% \tl_sow:Nn \l_tmpa_tl {tokens2}
+% \tl_sow:Nn \l_tmpa_tl {tokens3}
+% \tl_sow:Nn \l_tmpa_tl {tokens4}
+% \end{verbatim}
+% At this point, the token list variable (here, \cs{l_tmpa_tl}) will be unchanged
+% from its original definition. Now `reap' the token list variable:
+% \begin{verbatim}
+% \tl_sow_reap:N \l_tmpa_tl
+% \end{verbatim}
+% This defines the token list variables as the concatenation of the tokens defined in each `sow' command.
+% To complete the example, the contents of \cs{l_tmpa_tl} are now:
+% \begin{verbatim}
+% tokens1tokens2tokens3tokens4
+% \end{verbatim}
+% \end{function}
+%
 % \section{Additions to \pkg{l3token}}
 %
 % \begin{variable}[added = 2017-08-07]{\c_catcode_active_space_tl}
@@ -3136,7 +3172,7 @@
     \cs_if_exist:cTF { c_@@_change_case_ #2 _ \token_to_str:N #1 _tl }
       {
         \@@_change_case_output:vwn
-          { c_@@_change_case_ #2 _ \token_to_str:N #1 _tl } 
+          { c_@@_change_case_ #2 _ \token_to_str:N #1 _tl }
         #3
       }
       {
@@ -3144,7 +3180,7 @@
           {
             c_@@_change_case_
             \str_if_eq:nnTF {#2} { lower } { upper } { lower }
-            _ \token_to_str:N #1 _tl 
+            _ \token_to_str:N #1 _tl
           }
           {
             \@@_change_case_output:nwn {#1}
@@ -3768,7 +3804,7 @@
   \@@_tmp:w \c__unicode_dotless_i_tl { 0131 }
   \@@_tmp:w \c__unicode_dotted_I_tl  { 0130 }
   \@@_tmp:w \c__unicode_i_ogonek_tl  { 012F }
-  \@@_tmp:w \c__unicode_I_ogonek_tl  { 012E }  
+  \@@_tmp:w \c__unicode_I_ogonek_tl  { 012E }
 \group_end:
 %    \end{macrocode}
 % \end{variable}
@@ -4272,6 +4308,133 @@
             #2
           \fi:
         \fi:
+      }
+  }
+%    \end{macrocode}
+% \end{macro}
+%
+% \subsection{Sow/reap}
+%
+% This is a sketch of how sow/reap works:
+% \begin{verbatim}
+%   \def\l_foo_1_tl{\unexpanded{sow1}}
+%   \def\l_foo_2_tl{\unexpanded{sow2}}
+%   % ...
+%   \edef\foo{\l_foo_1_tl\l_foo_2_tl...}
+% \end{verbatim}
+% We use a variable-specific to keep track of as many sow/reap variables
+% as desired.
+%
+% Important question: after reaping, should we also zero all internal sow
+% tl variables? Would it help memory consumption in any meaningful way
+% or just slow things down a bit?
+%
+% Both local and global variantions are defined, and this is done manually
+% because there are too many different functions that need to be switched
+% between the cases.
+%
+% \begin{macro}{\__tl_sow_item:Nn,\__tl_gsow_item:Nn}
+% Helper variables for constructing \verb|c|-type arguments.
+%    \begin{macrocode}
+\cs_new:Nn \__tl_sow_item:Nn  { l___sow___ \token_to_str:N #1 ___ #2 ___tl }
+\cs_new:Nn \__tl_gsow_item:Nn { g___sow___ \token_to_str:N #1 ___ #2 ___tl }
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}{\__tl_sow_int:N,\__tl_gsow_int:N}
+% Helper variables for constructing \verb|c|-type arguments.
+%    \begin{macrocode}
+\cs_new:Nn \__tl_sow_int:N  { l___sow___ \token_to_str:N #1 ___int }
+\cs_new:Nn \__tl_gsow_int:N { g___sow___ \token_to_str:N #1 ___int }
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}{\tl_sow_prepare:N,\tl_gsow_prepare:N}
+%    \begin{macrocode}
+\cs_new:Nn \tl_sow_prepare:N
+  {
+    \tl_clear:N #1
+    \int_zero_new:c { \__tl_sow_int:N #1 }
+  }
+%    \end{macrocode}
+%
+%    \begin{macrocode}
+\cs_new:Nn \tl_gsow_prepare:N
+  {
+    \tl_gclear:N #1
+    \int_gzero_new:c { \__tl_gsow_int:N #1 }
+  }
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}{\tl_sow:Nn,\tl_gsow:Nn}
+%    \begin{macrocode}
+\cs_new:Nn \tl_sow:Nn
+  {
+    \int_incr:c { \__tl_sow_int:N #1 }
+    \tl_clear_new:c
+      {
+        \__tl_sow_item:Nn #1
+          { \int_use:c { \__tl_sow_int:N #1 } }
+      }
+    \tl_set:cn
+      {
+        \__tl_sow_item:Nn #1
+          { \int_use:c { \__tl_sow_int:N #1 } }
+      }
+      { #2 }
+  }
+%    \end{macrocode}
+%
+%    \begin{macrocode}
+\cs_new:Nn \tl_gsow:Nn
+  {
+    \int_gincr:c { \__tl_gsow_int:N #1 }
+    \tl_gclear_new:c
+      {
+        \__tl_gsow_item:Nn #1
+          { \int_use:c { \__tl_gsow_int:N #1 } }
+      }
+    \tl_gset:cn
+      {
+        \__tl_gsow_item:Nn #1
+          { \int_use:c { \__tl_gsow_int:N #1 } }
+      }
+      { #2 }
+  }
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}{\tl_sow_reap:N,\tl_gsow_greap:N}
+%    \begin{macrocode}
+\cs_new:Nn \tl_sow_reap:N
+  {
+    \cs_set:Npn \__tl_sow_tmp:n ##1
+      {
+        \exp_not:v { \__tl_sow_item:Nn #1 {##1} }
+      }
+    \tl_set:Nx #1
+      {
+        \int_step_function:nnnN {1} {1}
+          { \int_use:c { \__tl_sow_int:N #1 } }
+          \__tl_sow_tmp:n
+      }
+
+  }
+%    \end{macrocode}
+%
+%    \begin{macrocode}
+\cs_new:Nn \tl_gsow_greap:N
+  {
+    \cs_set:Npn \__tl_sow_tmp:n ##1
+      {
+        \exp_not:v { \__tl_gsow_item:Nn #1 {##1} }
+      }
+    \tl_gset:Nx #1
+      {
+        \int_step_function:nnnN {1} {1}
+          { \int_use:c { \__tl_gsow_int:N #1 } }
+          \__tl_sow_tmp:n
       }
   }
 %    \end{macrocode}
