--- a/l3kernel/l3box.dtx
+++ b/l3kernel/l3box.dtx
@@ -2072,10 +2072,10 @@
 \cs_new_protected:Npn \box_resize:cnn
   { \box_resize_to_wd_and_ht_plus_dp:cnn }
 \__debug_deprecation:nnNNpn
-  { 2018-12-31 } { \box_use_clear:N }
+  { 2018-12-31 } { \box_use_drop:N }
 \cs_new_protected:Npn \box_use_clear:N { \box_use_drop:N }
 \__debug_deprecation:nnNNpn
-  { 2018-12-31 } { \box_use_clear:c }
+  { 2018-12-31 } { \box_use_drop:c }
 \cs_new_protected:Npn \box_use_clear:c { \box_use_drop:c }
 %    \end{macrocode}
 % \end{macro}
