Rename __debug to __kernel where applicable (see #419)

--- a/l3kernel/l3expan.dtx
+++ b/l3kernel/l3expan.dtx
@@ -1561,7 +1561,7 @@
 %   iterate through the comma list of variant argument specifiers, which
 %   we first convert to a string: the reason is explained later.
 %    \begin{macrocode}
-\__debug_patch:nnNNpn { \__debug_chk_cs_exist:N #1 } { }
+\__kernel_patch:nnNNpn { \__kernel_chk_cs_exist:N #1 } { }
 \cs_new_protected:Npn \cs_generate_variant:Nn #1#2
   {
     \@@_generate_variant:N #1
@@ -1916,11 +1916,11 @@
 %   \cs{cs_new_protected:Npx}.  Then define the variant by
 %   combining the |\exp_args:N #3| variant and the base function.
 %    \begin{macrocode}
-\__debug_patch:nnNNpn
+\__kernel_patch:nnNNpn
   {
     \cs_if_free:NF #4
       {
-        \__debug_log:x
+        \__kernel_debug_log:x
           {
             Variant~\token_to_str:N #4~%
             already~defined;~ not~ changing~ it~ \msg_line_context:
