--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: l3file.dtx Copyright (C) 1990-2017 The LaTeX3 Project
+%% File: l3file.dtx Copyright (C) 1990-2018 The LaTeX3 Project
 %
 % It may be distributed and/or modified under the conditions of the
 % LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -2397,17 +2397,12 @@
 %    \begin{macrocode}
 \tl_new:N \g_file_current_name_tl
 \tl_gset:Nn \g_file_current_name_tl { \g_file_curr_name_str }
-\__debug:TF
+\__kernel_deprecation_code:nn
   {
-    \tl_gput_right:Nn \g__debug_deprecation_on_tl
-      {
-        \__deprecation_error:Nnn \g_file_current_name_tl
-          { \g_file_curr_name_str } { 2018-12-31 }
-      }
-    \tl_gput_right:Nn \g__debug_deprecation_off_tl
-      { \tex_def:D \g_file_current_name_tl { \g_file_curr_name_str } }
+    \__deprecation_error:Nnn \g_file_current_name_tl
+      { \g_file_curr_name_str } { 2018-12-31 }
   }
-  { }
+  { \tex_def:D \g_file_current_name_tl { \g_file_curr_name_str } }
 %    \end{macrocode}
 % \end{variable}
 %
@@ -2415,7 +2410,7 @@
 % \begin{macro}[deprecated = 2018-12-31]{\file_path_remove:n}
 %   Wrapper functions to manage the search path.
 %    \begin{macrocode}
-\__debug_deprecation:nnNNpn { 2018-12-31 }
+\__kernel_patch_deprecation:nnNNpn { 2018-12-31 }
   { \seq_put_right:Nn \l_file_search_path_seq }
 \cs_new_protected:Npn \file_path_include:n #1
   {
@@ -2423,7 +2418,7 @@
     \seq_if_in:NVF \l_file_search_path_seq \l__file_full_name_str
       { \seq_put_right:NV \l_file_search_path_seq \l__file_full_name_str }
   }
-\__debug_deprecation:nnNNpn { 2018-12-31 }
+\__kernel_patch_deprecation:nnNNpn { 2018-12-31 }
   { \seq_remove_all:Nn \l_file_search_path_seq }
 \cs_new_protected:Npn \file_path_remove:n #1
   {
@@ -2437,7 +2432,7 @@
 % \begin{macro}[deprecated = 2018-12-31]{\file_add_path:nN}
 %   For removal after 2018-12-31.
 %    \begin{macrocode}
-\__debug_deprecation:nnNNpn { 2018-12-31 } { \file_get_full_name:nN }
+\__kernel_patch_deprecation:nnNNpn { 2018-12-31 } { \file_get_full_name:nN }
 \cs_new_protected:Npn \file_add_path:nN #1#2
   {
     \file_get_full_name:nN {#1} #2
@@ -2450,7 +2445,7 @@
 % \begin{macro}[added = 2012-06-24, updated = 2012-07-31, deprecated=2017-12-31]{\ior_get_str:NN}
 %   For removal after 2017-12-31.
 %    \begin{macrocode}
-\__debug_deprecation:nnNNpn { 2017-12-31 } { \ior_str_get:NN }
+\__kernel_patch_deprecation:nnNNpn { 2017-12-31 } { \ior_str_get:NN }
 \cs_new_protected:Npn \ior_get_str:NN      { \ior_str_get:NN }
 %    \end{macrocode}
 % \end{macro}
@@ -2458,7 +2453,7 @@
 % \begin{macro}[deprecated = 2018-12-31]{\file_list:}
 %   Renamed to \cs{file_log_list:}.  For removal after 2018-12-31.
 %    \begin{macrocode}
-\__debug_deprecation:nnNNpn { 2018-12-31 } { \file_log_list: }
+\__kernel_patch_deprecation:nnNNpn { 2018-12-31 } { \file_log_list: }
 \cs_new_protected:Npn \file_list:          { \file_log_list: }
 %    \end{macrocode}
 % \end{macro}
@@ -2467,13 +2462,13 @@
 %   {\ior_list_streams:, \ior_log_streams:, \iow_list_streams:, \iow_log_streams:}
 %   These got a more consistent naming.
 %    \begin{macrocode}
-\__debug_deprecation:nnNNpn { 2018-12-31 } { \ior_show_list: }
+\__kernel_patch_deprecation:nnNNpn { 2018-12-31 } { \ior_show_list: }
 \cs_new_protected:Npn \ior_list_streams:   { \ior_show_list: }
-\__debug_deprecation:nnNNpn { 2018-12-31 } { \ior_log_list: }
+\__kernel_patch_deprecation:nnNNpn { 2018-12-31 } { \ior_log_list: }
 \cs_new_protected:Npn \ior_log_streams:    { \ior_log_list: }
-\__debug_deprecation:nnNNpn { 2018-12-31 } { \iow_show_list: }
+\__kernel_patch_deprecation:nnNNpn { 2018-12-31 } { \iow_show_list: }
 \cs_new_protected:Npn \iow_list_streams:   { \iow_show_list: }
-\__debug_deprecation:nnNNpn { 2018-12-31 } { \iow_log_list: }
+\__kernel_patch_deprecation:nnNNpn { 2018-12-31 } { \iow_log_list: }
 \cs_new_protected:Npn \iow_log_streams:    { \iow_log_list: }
 %    \end{macrocode}
 % \end{macro}
