--- a/l3kernel/l3regex.dtx
+++ b/l3kernel/l3regex.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: l3regex.dtx Copyright (C) 2011-2017 The LaTeX3 Project
+%% File: l3regex.dtx Copyright (C) 2011-2018 The LaTeX3 Project
 %
 % It may be distributed and/or modified under the conditions of the
 % LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -1457,11 +1457,11 @@
 %   \cs{__tl_build_one:o} by a single call to \cs{__tl_build_one:x}, because
 %   the \texttt{x}-expanding assignment may be interrupted by |\x|.
 %    \begin{macrocode}
-\__debug_patch:nnNNpn
+\__kernel_patch:nnNNpn
   {
-    \__debug_trace_push:nnN { regex } { 1 } \@@_escape_use:nnnn
+    \@@_trace_push:nnN { regex } { 1 } \@@_escape_use:nnnn
     \__tl_build:Nw \l_@@_internal_a_tl
-      \__tl_build_one:n { \__debug_trace_pop:nnN { regex } { 1 } \@@_escape_use:nnnn }
+      \__tl_build_one:n { \@@_trace_pop:nnN { regex } { 1 } \@@_escape_use:nnnn }
       \use_none:nn
   }
   { }
@@ -3685,11 +3685,11 @@
     \@@_compile:n {#1}
     \@@_build:N \l_@@_internal_regex
   }
-\__debug_patch:nnNNpn
-  { \__debug_trace_push:nnN { regex } { 1 } \@@_build:N }
+\__kernel_patch:nnNNpn
+  { \@@_trace_push:nnN { regex } { 1 } \@@_build:N }
   {
     \@@_trace_states:n { 2 }
-    \__debug_trace_pop:nnN { regex } { 1 } \@@_build:N
+    \@@_trace_pop:nnN { regex } { 1 } \@@_build:N
   }
 \cs_new_protected:Npn \@@_build:N #1
   {
@@ -3714,11 +3714,11 @@
 %   work properly at the outer level, we need to put the appropriate
 %   \texttt{left} and \texttt{right} states in their sequence.
 %    \begin{macrocode}
-\__debug_patch:nnNNpn
-  { \__debug_trace_push:nnN { regex } { 1 } \@@_build_for_cs:n }
+\__kernel_patch:nnNNpn
+  { \@@_trace_push:nnN { regex } { 1 } \@@_build_for_cs:n }
   {
     \@@_trace_states:n { 2 }
-    \__debug_trace_pop:nnN { regex } { 1 } \@@_build_for_cs:n
+    \@@_trace_pop:nnN { regex } { 1 } \@@_build_for_cs:n
   }
 \cs_new_protected:Npn \@@_build_for_cs:n #1
   {
@@ -3786,9 +3786,9 @@
 %   \texttt{right} state is the new empty state, and the \texttt{left}
 %   state points to the previously \enquote{current} state.
 %    \begin{macrocode}
-\__debug_patch:nnNNpn
+\__kernel_patch:nnNNpn
   {
-    \__debug_trace:nnx { regex } { 2 }
+    \@@_trace:nnx { regex } { 2 }
       {
         regex~new~state~
         L=\int_use:N \l_@@_left_state_int ~ -> ~
@@ -3952,9 +3952,9 @@
 %   auxiliaries expects \texttt{left_state} and \texttt{right_state} to
 %   be set properly.
 %    \begin{macrocode}
-\__debug_patch:nnNNpn
-  { \__debug_trace_push:nnN { regex } { 1 } \@@_group_aux:nnnnN }
-  { \__debug_trace_pop:nnN { regex } { 1 } \@@_group_aux:nnnnN }
+\__kernel_patch:nnNNpn
+  { \@@_trace_push:nnN { regex } { 1 } \@@_group_aux:nnnnN }
+  { \@@_trace_pop:nnN { regex } { 1 } \@@_group_aux:nnnnN }
 \cs_new_protected:Npn \@@_group_aux:nnnnN #1#2#3#4#5
   {
       \if_int_compare:w #3 = 0 \exp_stop_f:
@@ -4035,9 +4035,9 @@
 %   the group. The left and right states of the group are extracted from
 %   the relevant sequences.
 %    \begin{macrocode}
-\__debug_patch:nnNNpn
-  { \__debug_trace_push:nnN { regex } { 1 } \@@_branch:n }
-  { \__debug_trace_pop:nnN { regex } { 1 } \@@_branch:n }
+\__kernel_patch:nnNNpn
+  { \@@_trace_push:nnN { regex } { 1 } \@@_branch:n }
+  { \@@_trace_pop:nnN { regex } { 1 } \@@_branch:n }
 \cs_new_protected:Npn \@@_branch:n #1
   {
     \@@_build_new_state:
@@ -4533,12 +4533,12 @@
 %   smothering an empty match at the start). Once all this is set up, we
 %   are ready for the ride. Find the first match.
 %    \begin{macrocode}
-\__debug_patch:nnNNpn
+\__kernel_patch:nnNNpn
   {
-    \__debug_trace_push:nnN { regex } { 1 } \@@_match:n
-    \__debug_trace:nnx { regex } { 1 } { analyzing~query~token~list }
+    \@@_trace_push:nnN { regex } { 1 } \@@_match:n
+    \@@_trace:nnx { regex } { 1 } { analyzing~query~token~list }
   }
-  { \__debug_trace_pop:nnN { regex } { 1 } \@@_match:n }
+  { \@@_trace_pop:nnN { regex } { 1 } \@@_match:n }
 \cs_new_protected:Npn \@@_match:n #1
   {
     \int_zero:N \l_@@_balance_int
@@ -4552,8 +4552,8 @@
     \@@_match_init:
     \@@_match_once:
   }
-\__debug_patch:nnNNpn
-  { \__debug_trace:nnx { regex } { 1 } { initializing } }
+\__kernel_patch:nnNNpn
+  { \@@_trace:nnx { regex } { 1 } { initializing } }
   { }
 \cs_new_protected:Npn \@@_match_init:
   {
@@ -4733,8 +4733,8 @@
 %   state is marked as $\texttt{step}+1$: any thread hitting it at that
 %   point will be terminated.
 %    \begin{macrocode}
-\__debug_patch:nnNNpn
-  { \__debug_trace:nnx { regex } { 2 } { state~\int_use:N \l_@@_curr_state_int } }
+\__kernel_patch:nnNNpn
+  { \@@_trace:nnx { regex } { 2 } { state~\int_use:N \l_@@_curr_state_int } }
   { }
 \cs_new_protected:Npn \@@_use_state:
   {
@@ -5098,9 +5098,9 @@
 %   parsed, make sure that there is no open csname. Finally, define the
 %   \texttt{balance_one_match} and \texttt{do_one_match} functions.
 %    \begin{macrocode}
-\__debug_patch:nnNNpn
-  { \__debug_trace_push:nnN { regex } { 1 } \@@_replacement:n }
-  { \__debug_trace_pop:nnN { regex } { 1 } \@@_replacement:n }
+\__kernel_patch:nnNNpn
+  { \@@_trace_push:nnN { regex } { 1 } \@@_replacement:n }
+  { \@@_trace_pop:nnN { regex } { 1 } \@@_replacement:n }
 \cs_new_protected:Npn \@@_replacement:n #1
   {
     \__tl_build:Nw \l_@@_internal_a_tl
@@ -6513,21 +6513,21 @@
 % be merged.
 %
 % \begin{macro}
-%   {\__debug_trace_push:nnN, \__debug_trace_pop:nnN, \__debug_trace:nnx}
+%   {\@@_trace_push:nnN, \@@_trace_pop:nnN, \@@_trace:nnx}
 %   Here |#1| is the module name (\texttt{regex}) and |#2| is
 %   typically~1.  If the module's current tracing level is less than
 %   |#2| show nothing, otherwise write |#3| to the terminal.
 %    \begin{macrocode}
-\__debug:TF
+\__kernel_debug:TF
   {
-    \cs_new_protected:Npn \__debug_trace_push:nnN #1#2#3
-      { \__debug_trace:nnx {#1} {#2} { entering~ \token_to_str:N #3 } }
-    \cs_new_protected:Npn \__debug_trace_pop:nnN #1#2#3
-      { \__debug_trace:nnx {#1} {#2} { leaving~ \token_to_str:N #3 } }
-    \cs_new_protected:Npn \__debug_trace:nnx #1#2#3
+    \cs_new_protected:Npn \@@_trace_push:nnN #1#2#3
+      { \@@_trace:nnx {#1} {#2} { entering~ \token_to_str:N #3 } }
+    \cs_new_protected:Npn \@@_trace_pop:nnN #1#2#3
+      { \@@_trace:nnx {#1} {#2} { leaving~ \token_to_str:N #3 } }
+    \cs_new_protected:Npn \@@_trace:nnx #1#2#3
       {
         \int_compare:nNnF
-          { \int_use:c { g__debug_trace_#1_int } } < {#2}
+          { \int_use:c { g_@@_trace_#1_int } } < {#2}
           { \iow_term:x { Trace:~#3 } }
       }
   }
@@ -6535,10 +6535,10 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{variable}{\g__debug_trace_regex_int}
+% \begin{variable}{\g_@@_trace_regex_int}
 %   No tracing when that is zero.
 %    \begin{macrocode}
-\int_new:N \g__debug_trace_regex_int
+\int_new:N \g_@@_trace_regex_int
 %    \end{macrocode}
 % \end{variable}
 %
@@ -6547,7 +6547,7 @@
 %   stored in \tn{toks} from $0$ to \cs{l_@@_max_state_int}
 %   (excluded).
 %    \begin{macrocode}
-\__debug:TF
+\__kernel_debug:TF
   {
     \cs_new_protected:Npn \@@_trace_states:n #1
       {
@@ -6556,7 +6556,7 @@
           { 1 }
           { \l_@@_max_state_int - 1 }
           {
-            \__debug_trace:nnx { regex } {#1}
+            \@@_trace:nnx { regex } {#1}
               { \iow_char:N \\toks ##1 = { \@@_toks_use:w ##1 } }
           }
       }
