--- a/l3kernel/l3str.dtx
+++ b/l3kernel/l3str.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: l3str.dtx Copyright (C) 2011-2017 The LaTeX3 Project
+%% File: l3str.dtx Copyright (C) 2011-2018 The LaTeX3 Project
 %
 % It may be distributed and/or modified under the conditions of the
 % LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -1496,7 +1496,7 @@
   }
 \cs_new:Npn \str_item_ignore_spaces:nn #1
   { \exp_args:No \@@_item:nn { \tl_to_str:n {#1} } }
-\__debug_patch_args:nNNpn { {#1} { \__int_eval:n {#2} } }
+\__kernel_patch_args:nNNpn { {#1} { \__int_eval:n {#2} } }
 \cs_new:Npn \@@_item:nn #1#2
   {
     \exp_after:wN \@@_item:w
@@ -1593,7 +1593,7 @@
   }
 \cs_new:Npn \str_range_ignore_spaces:nnn #1
   { \exp_args:No \@@_range:nnn { \tl_to_str:n {#1} } }
-\__debug_patch_args:nNNpn
+\__kernel_patch_args:nNNpn
   { {#1} { \__int_eval:n {#2} } { \__int_eval:n {#3} } }
 \cs_new:Npn \@@_range:nnn #1#2#3
   {
