--- a/l3kernel/l3token.dtx
+++ b/l3kernel/l3token.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: l3token.dtx Copyright (C) 2005-2017 The LaTeX3 Project
+%% File: l3token.dtx Copyright (C) 2005-2018 The LaTeX3 Project
 %
 % It may be distributed and/or modified under the conditions of the
 % LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -1368,7 +1368,7 @@
 %   the interface layer, turn the two arguments into integers up-front so
 %   this is only done once.
 %    \begin{macrocode}
-\__debug_patch_args:nNNpn { { \__int_eval:n {#1} } { \__int_eval:n {#2} } }
+\__kernel_patch_args:nNNpn { { \__int_eval:n {#1} } { \__int_eval:n {#2} } }
 \cs_new:Npn \char_generate:nn #1#2
   {
     \exp:w \exp_after:wN \@@_generate_aux:w
@@ -2557,7 +2557,7 @@
 % \begin{macro}[deprecated=2018-12-31]{\token_new:Nn}
 %   For removal after 2018-12-31.
 %    \begin{macrocode}
-\__debug_deprecation:nnNNpn { 2018-12-31 } { \cs_new_eq:NN }
+\__kernel_patch_deprecation:nnNNpn { 2018-12-31 } { \cs_new_eq:NN }
 \cs_new_protected:Npn \token_new:Nn #1#2 { \cs_new_eq:NN #1 #2 }
 %    \end{macrocode}
 % \end{macro}
