--- a/l3kernel/l3box.dtx
+++ b/l3kernel/l3box.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: l3box.dtx Copyright (C) 2005-2017 The LaTeX3 Project
+%% File: l3box.dtx Copyright (C) 2005-2018 The LaTeX3 Project
 %
 % It may be distributed and/or modified under the conditions of the
 % LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -901,10 +901,10 @@
 % \testfile*
 %   Assigning the contents of a box to be another box.
 %    \begin{macrocode}
-\__debug_patch:nnNNpn { \__debug_chk_var_local:N #1 } { }
+\__kernel_patch:nnNNpn { \__kernel_chk_var_local:N #1 } { }
 \cs_new_protected:Npn \box_set_eq:NN #1#2
   { \tex_setbox:D #1 \tex_copy:D #2 }
-\__debug_patch:nnNNpn { \__debug_chk_var_global:N #1 } { }
+\__kernel_patch:nnNNpn { \__kernel_chk_var_global:N #1 } { }
 \cs_new_protected:Npn \box_gset_eq:NN #1#2
   { \tex_global:D \tex_setbox:D #1 \tex_copy:D #2 }
 \cs_generate_variant:Nn \box_set_eq:NN  { c , Nc , cc }
@@ -928,10 +928,10 @@
 %    Assigning the contents of a box to be another box.
 %    This clears the second box globally (that's how \TeX{} does it).
 %    \begin{macrocode}
-\__debug_patch:nnNNpn { \__debug_chk_var_local:N #1 } { }
+\__kernel_patch:nnNNpn { \__kernel_chk_var_local:N #1 } { }
 \cs_new_protected:Npn \box_set_eq_clear:NN #1#2
   { \tex_setbox:D #1 \tex_box:D #2 }
-\__debug_patch:nnNNpn { \__debug_chk_var_global:N #1 } { }
+\__kernel_patch:nnNNpn { \__kernel_chk_var_global:N #1 } { }
 \cs_new_protected:Npn \box_gset_eq_clear:NN #1#2
   { \tex_global:D \tex_setbox:D #1 \tex_box:D #2 }
 \cs_generate_variant:Nn \box_set_eq_clear:NN  { c , Nc , cc }
@@ -1078,10 +1078,10 @@
 % \testfile*
 %    Set a box to the previous box.
 %    \begin{macrocode}
-\__debug_patch:nnNNpn { \__debug_chk_var_local:N #1 } { }
+\__kernel_patch:nnNNpn { \__kernel_chk_var_local:N #1 } { }
 \cs_new_protected:Npn \box_set_to_last:N #1
   { \tex_setbox:D #1 \tex_lastbox:D }
-\__debug_patch:nnNNpn { \__debug_chk_var_global:N #1 } { }
+\__kernel_patch:nnNNpn { \__kernel_chk_var_global:N #1 } { }
 \cs_new_protected:Npn \box_gset_to_last:N #1
   { \tex_global:D \tex_setbox:D #1 \tex_lastbox:D }
 \cs_generate_variant:Nn \box_set_to_last:N  { c }
@@ -1198,10 +1198,10 @@
 % \begin{macro}{\hbox_gset:Nn, \hbox_gset:cn}
 % \testfile*
 %    \begin{macrocode}
-\__debug_patch:nnNNpn { \__debug_chk_var_local:N #1 } { }
+\__kernel_patch:nnNNpn { \__kernel_chk_var_local:N #1 } { }
 \cs_new_protected:Npn \hbox_set:Nn #1#2
   { \tex_setbox:D #1 \tex_hbox:D { \group_begin: #2 \group_end: } }
-\__debug_patch:nnNNpn { \__debug_chk_var_global:N #1 } { }
+\__kernel_patch:nnNNpn { \__kernel_chk_var_global:N #1 } { }
 \cs_new_protected:Npn \hbox_gset:Nn #1#2
   { \tex_global:D \tex_setbox:D #1 \tex_hbox:D { \group_begin: #2 \group_end: } }
 \cs_generate_variant:Nn \hbox_set:Nn { c }
@@ -1216,13 +1216,13 @@
 %   Storing material in a horizontal box with a specified width.
 %   Again, put the dimension expression in parentheses when debugging.
 %    \begin{macrocode}
-\__debug_patch:nnNNpn { \__debug_chk_var_local:N #1 } { }
+\__kernel_patch:nnNNpn { \__kernel_chk_var_local:N #1 } { }
 \cs_new_protected:Npn \hbox_set_to_wd:Nnn #1#2#3
   {
     \tex_setbox:D #1 \tex_hbox:D to \__dim_eval:n {#2}
       { \group_begin: #3 \group_end: }
   }
-\__debug_patch:nnNNpn { \__debug_chk_var_global:N #1 } { }
+\__kernel_patch:nnNNpn { \__kernel_chk_var_global:N #1 } { }
 \cs_new_protected:Npn \hbox_gset_to_wd:Nnn #1#2#3
   {
     \tex_global:D \tex_setbox:D #1 \tex_hbox:D to \__dim_eval:n {#2}
@@ -1241,14 +1241,14 @@
 %    Storing material in a horizontal box. This type is useful in
 %    environment definitions.
 %    \begin{macrocode}
-\__debug_patch:nnNNpn { \__debug_chk_var_local:N #1 } { }
+\__kernel_patch:nnNNpn { \__kernel_chk_var_local:N #1 } { }
 \cs_new_protected:Npn \hbox_set:Nw  #1
   {
     \tex_setbox:D #1 \tex_hbox:D
       \c_group_begin_token
         \group_begin:
   }
-\__debug_patch:nnNNpn { \__debug_chk_var_global:N #1 } { }
+\__kernel_patch:nnNNpn { \__kernel_chk_var_global:N #1 } { }
 \cs_new_protected:Npn \hbox_gset:Nw  #1
   {
     \tex_global:D \tex_setbox:D #1 \tex_hbox:D
@@ -1272,14 +1272,14 @@
 % \begin{macro}{\hbox_gset_to_wd:Nnw, \hbox_gset_to_wd:cnw}
 %   Combining the above ideas.
 %    \begin{macrocode}
-\__debug_patch:nnNNpn { \__debug_chk_var_local:N #1 } { }
+\__kernel_patch:nnNNpn { \__kernel_chk_var_local:N #1 } { }
 \cs_new_protected:Npn \hbox_set_to_wd:Nnw #1#2
   {
     \tex_setbox:D #1 \tex_hbox:D to \__dim_eval:n {#2}
       \c_group_begin_token
         \group_begin:
   }
-\__debug_patch:nnNNpn { \__debug_chk_var_global:N #1 } { }
+\__kernel_patch:nnNNpn { \__kernel_chk_var_global:N #1 } { }
 \cs_new_protected:Npn \hbox_gset_to_wd:Nnw #1#2
   {
     \tex_global:D \tex_setbox:D #1 \tex_hbox:D to \__dim_eval:n {#2}
@@ -1376,13 +1376,13 @@
 % \testfile*
 %   Storing material in a vertical box with a natural height.
 %    \begin{macrocode}
-\__debug_patch:nnNNpn { \__debug_chk_var_local:N #1 } { }
+\__kernel_patch:nnNNpn { \__kernel_chk_var_local:N #1 } { }
 \cs_new_protected:Npn \vbox_set:Nn #1#2
   {
     \tex_setbox:D #1 \tex_vbox:D
       { \group_begin: #2 \par \group_end: }
   }
-\__debug_patch:nnNNpn { \__debug_chk_var_global:N #1 } { }
+\__kernel_patch:nnNNpn { \__kernel_chk_var_global:N #1 } { }
 \cs_new_protected:Npn \vbox_gset:Nn #1#2
   {
     \tex_global:D \tex_setbox:D #1 \tex_vbox:D
@@ -1400,13 +1400,13 @@
 %   Storing material in a vertical box with a natural height and reference
 %   point at the baseline of the first object in the box.
 %    \begin{macrocode}
-\__debug_patch:nnNNpn { \__debug_chk_var_local:N #1 } { }
+\__kernel_patch:nnNNpn { \__kernel_chk_var_local:N #1 } { }
 \cs_new_protected:Npn \vbox_set_top:Nn #1#2
   {
     \tex_setbox:D #1 \tex_vtop:D
       { \group_begin: #2 \par \group_end: }
   }
-\__debug_patch:nnNNpn { \__debug_chk_var_global:N #1 } { }
+\__kernel_patch:nnNNpn { \__kernel_chk_var_global:N #1 } { }
 \cs_new_protected:Npn \vbox_gset_top:Nn #1#2
   {
     \tex_global:D \tex_setbox:D #1 \tex_vtop:D
@@ -1423,13 +1423,13 @@
 %  \testfile*
 %  Storing material in a vertical box with a specified height.
 %    \begin{macrocode}
-\__debug_patch:nnNNpn { \__debug_chk_var_local:N #1 } { }
+\__kernel_patch:nnNNpn { \__kernel_chk_var_local:N #1 } { }
 \cs_new_protected:Npn \vbox_set_to_ht:Nnn #1#2#3
   {
     \tex_setbox:D #1 \tex_vbox:D to \__dim_eval:n {#2}
       { \group_begin: #3 \par \group_end: }
   }
-\__debug_patch:nnNNpn { \__debug_chk_var_global:N #1 } { }
+\__kernel_patch:nnNNpn { \__kernel_chk_var_global:N #1 } { }
 \cs_new_protected:Npn \vbox_gset_to_ht:Nnn #1#2#3
   {
     \tex_global:D \tex_setbox:D #1 \tex_vbox:D to \__dim_eval:n {#2}
@@ -1448,14 +1448,14 @@
 %   Storing material in a vertical box. This type is useful in
 %   environment definitions.
 %    \begin{macrocode}
-\__debug_patch:nnNNpn { \__debug_chk_var_local:N #1 } { }
+\__kernel_patch:nnNNpn { \__kernel_chk_var_local:N #1 } { }
 \cs_new_protected:Npn \vbox_set:Nw #1
   {
     \tex_setbox:D #1 \tex_vbox:D
       \c_group_begin_token
         \group_begin:
   }
-\__debug_patch:nnNNpn { \__debug_chk_var_global:N #1 } { }
+\__kernel_patch:nnNNpn { \__kernel_chk_var_global:N #1 } { }
 \cs_new_protected:Npn \vbox_gset:Nw #1
   {
     \tex_global:D \tex_setbox:D #1 \tex_vbox:D
@@ -1480,14 +1480,14 @@
 % \begin{macro}{\vbox_gset_to_ht:Nnw, \vbox_gset_to_ht:cnw}
 %   A combination of the above ideas.
 %    \begin{macrocode}
-\__debug_patch:nnNNpn { \__debug_chk_var_local:N #1 } { }
+\__kernel_patch:nnNNpn { \__kernel_chk_var_local:N #1 } { }
 \cs_new_protected:Npn \vbox_set_to_ht:Nnw #1#2
   {
     \tex_setbox:D #1 \tex_vbox:D to \__dim_eval:n {#2}
       \c_group_begin_token
         \group_begin:
   }
-\__debug_patch:nnNNpn { \__debug_chk_var_global:N #1 } { }
+\__kernel_patch:nnNNpn { \__kernel_chk_var_global:N #1 } { }
 \cs_new_protected:Npn \vbox_gset_to_ht:Nnw #1#2
   {
     \tex_global:D \tex_setbox:D #1 \tex_vbox:D to \__dim_eval:n {#2}
@@ -1517,7 +1517,7 @@
 % \testfile*
 %   Splitting a vertical box in two.
 %    \begin{macrocode}
-\__debug_patch:nnNNpn { \__debug_chk_var_local:N #1 } { }
+\__kernel_patch:nnNNpn { \__kernel_chk_var_local:N #1 } { }
 \cs_new_protected:Npn \vbox_set_split_to_ht:NNn #1#2#3
   { \tex_setbox:D #1 \tex_vsplit:D #2 to \__dim_eval:n {#3} }
 %    \end{macrocode}
@@ -2063,18 +2063,18 @@
 % \begin{macro}[deprecated = 2018-12-31]{\box_resize:Nnn, \box_resize:cnn}
 % \begin{macro}[deprecated = 2018-12-31]{\box_use_clear:N, \box_use_clear:c}
 %    \begin{macrocode}
-\__debug_deprecation:nnNNpn
+\__kernel_patch_deprecation:nnNNpn
   { 2018-12-31 } { \box_resize_to_wd_and_ht_plus_dp:Nnn }
 \cs_new_protected:Npn \box_resize:Nnn
   { \box_resize_to_wd_and_ht_plus_dp:Nnn }
-\__debug_deprecation:nnNNpn
+\__kernel_patch_deprecation:nnNNpn
   { 2018-12-31 } { \box_resize_to_wd_and_ht_plus_dp:cnn }
 \cs_new_protected:Npn \box_resize:cnn
   { \box_resize_to_wd_and_ht_plus_dp:cnn }
-\__debug_deprecation:nnNNpn
+\__kernel_patch_deprecation:nnNNpn
   { 2018-12-31 } { \box_use_drop:N }
 \cs_new_protected:Npn \box_use_clear:N { \box_use_drop:N }
-\__debug_deprecation:nnNNpn
+\__kernel_patch_deprecation:nnNNpn
   { 2018-12-31 } { \box_use_drop:c }
 \cs_new_protected:Npn \box_use_clear:c { \box_use_drop:c }
 %    \end{macrocode}
