--- a/l3kernel/l3deprecation.dtx
+++ b/l3kernel/l3deprecation.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: l3deprecation.dtx (C) Copyright 2017 The LaTeX3 Project
+%% File: l3deprecation.dtx (C) Copyright 2017-2018 The LaTeX3 Project
 %
 % It may be distributed and/or modified under the conditions of the
 % LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -120,20 +120,15 @@
 % This is left-over from \pkg{l3expan}.  It cannot be done there because
 % \pkg{l3tl} is not loaded at that time.
 %    \begin{macrocode}
-\__debug:TF
+\__kernel_deprecation_code:nn
   {
-    \tl_gput_right:Nn \g__debug_deprecation_on_tl
-      {
-        \cs_set_protected:Npn \__cs_generate_variant_loop_warning:nnxxxx
-          { \__kernel_msg_error:nnxxxx }
-      }
-    \tl_gput_right:Nn \g__debug_deprecation_off_tl
-      {
-        \cs_set_protected:Npn \__cs_generate_variant_loop_warning:nnxxxx
-          { \__kernel_msg_warning:nnxxxx }
-      }
+    \cs_set_protected:Npn \__cs_generate_variant_loop_warning:nnxxxx
+      { \__kernel_msg_error:nnxxxx }
   }
-  { }
+  {
+    \cs_set_protected:Npn \__cs_generate_variant_loop_warning:nnxxxx
+      { \__kernel_msg_warning:nnxxxx }
+  }
 %    \end{macrocode}
 %
 %    \begin{macrocode}
