--- a/l3kernel/l3fp-round.dtx
+++ b/l3kernel/l3fp-round.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: l3fp-round.dtx Copyright(C) 2011-2017 The LaTeX3 Project
+%% File: l3fp-round.dtx Copyright(C) 2011-2018 The LaTeX3 Project
 %
 % It may be distributed and/or modified under the conditions of the
 % LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -116,14 +116,13 @@
       \@@_round_o:Nw \@@_round_to_nearest:NNN #1
     #2
   }
-\__debug:TF
+\__kernel_debug:TF
   {
-    \tl_gput_right:Nn \g__debug_deprecation_on_tl
+    \__kernel_deprecation_code:nn
       {
         \cs_set_eq:NN \@@_parse_round:Nw
           \@@_parse_round_deprecation_error:Nw
       }
-    \tl_gput_right:Nn \g__debug_deprecation_off_tl
       {
         \cs_set_eq:NN \@@_parse_round:Nw
           \@@_parse_round_no_error:Nw
