--- a/l3kernel/l3quark.dtx
+++ b/l3kernel/l3quark.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: l3quark.dtx Copyright (C) 1990-2017 The LaTeX3 Project
+%% File: l3quark.dtx Copyright (C) 1990-2018 The LaTeX3 Project
 %
 % It may be distributed and/or modified under the conditions of the
 % LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -375,7 +375,7 @@
 % \UnitTested
 %    Allocate a new quark.
 %    \begin{macrocode}
-\__debug_patch:nnNNpn { \__debug_chk_var_scope:NN q #1 } { }
+\__kernel_patch:nnNNpn { \__kernel_chk_var_scope:NN q #1 } { }
 \cs_new_protected:Npn \quark_new:N #1
   {
     \__chk_if_free_cs:N #1
