--- a/l3kernel/l3sort.dtx
+++ b/l3kernel/l3sort.dtx
@@ -1,6 +1,6 @@
 % \iffalse
 %
-%% File l3sort.dtx (C) Copyright 2012-2017 The LaTeX3 Project
+%% File l3sort.dtx (C) Copyright 2012-2018 The LaTeX3 Project
 %
 % It may be distributed and/or modified under the conditions of the
 % LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -1078,9 +1078,9 @@
 % \begin{macro}[deprecated = 2018-12-31]{\sort_ordered:, \sort_reversed:}
 %   These functions were renamed for consistency.
 %    \begin{macrocode}
-\__debug_deprecation:nnNNpn { 2018-12-31 } { \sort_return_same: }
+\__kernel_patch_deprecation:nnNNpn { 2018-12-31 } { \sort_return_same: }
 \cs_new_protected:Npn \sort_ordered: { \sort_return_same: }
-\__debug_deprecation:nnNNpn { 2018-12-31 } { \sort_return_swapped: }
+\__kernel_patch_deprecation:nnNNpn { 2018-12-31 } { \sort_return_swapped: }
 \cs_new_protected:Npn \sort_reversed: { \sort_return_swapped: }
 %    \end{macrocode}
 % \end{macro}
