Typos caught by ispell in interface3

--- a/l3kernel/l3fp.dtx
+++ b/l3kernel/l3fp.dtx
@@ -408,7 +408,7 @@
 %   an optional leading~|!| (which negates the \meta{relation}), with
 %   the restriction that the \meta{relation} may not start with~|?|, as
 %   this symbol has a different meaning (in combination with~|:|) within
-%   floatin point expressions.  The comparison $x$~\meta{relation}~$y$
+%   floating point expressions.  The comparison $x$~\meta{relation}~$y$
 %   is then \texttt{true} if the \meta{relation} does not start with~|!|
 %   and the actual relation (|<|, |=|, |>|, or~|?|) between $x$ and~$y$
 %   appears within the \meta{relation}, or on the contrary if the
@@ -884,7 +884,7 @@
 %   Each \meta{relation} consists of a non-empty string of |<|, |=|,
 %   |>|, and~|?|, optionally preceded by~|!|, and may not start
 %   with~|?|.  This evaluates to $+1$ if all comparisons
-%   \meta{operand_i} \meta{relation_j} \meta{operand_{i+1}} are true, and
+%   \meta{operand_i} \meta{relation_i} \meta{operand_{i+1}} are true, and
 %   $+0$ otherwise.  All \meta{operands} are evaluated in all cases.
 %   See \cs{fp_compare:nTF} for details.
 % \end{function}
