--- a/l3kernel/l3regex.dtx
+++ b/l3kernel/l3regex.dtx
@@ -120,8 +120,8 @@
 %   sign.
 % \item \verb*"[+\-\ ]*\d+\ *" matches an explicit integer with any
 %   number of $+$ and $-$ signs, with spaces allowed except within the
-%   mantissa, and sourrounded by spaces.
-% \item \verb*"[+\-\ ]*(\d+|\d*\.\d+)\ *" matches an explict integer or
+%   mantissa, and surrounded by spaces.
+% \item \verb*"[+\-\ ]*(\d+|\d*\.\d+)\ *" matches an explicit integer or
 %   decimal number; using \verb*"[.,]" instead of \verb*"\." would allow
 %   the comma as a decimal marker.
 % \item
@@ -537,7 +537,7 @@
 %   equal to the number of times
 %   \meta{regular expression} appears in \meta{token list}.
 %   The search starts by finding the left-most longest match,
-%   respecting greedy and ungreedy operators. Then the search
+%   respecting greedy and lazy (non-greedy) operators. Then the search
 %   starts again from the character following the last character
 %   of the previous match, until reaching the end of the token list.
 %   Infinite loops are prevented in the case where the regular expression
